--- a/minekube/allocate/digitalOcean/do-pvc.yml
+++ b/minekube/allocate/digitalOcean/do-pvc.yml
@@ -1,22 +1,21 @@
 apiVersion: v1
 items:
-# Example PVCs for Kubernetes on DigitalOcean
-# https://github.com/digitalocean/csi-digitalocean
 - kind: PersistentVolumeClaim
   apiVersion: v1
   metadata:
-    name: bedrock-world
+    name: yourWorldClaimHere
   spec:
     accessModes:
     - ReadWriteOnce
     resources:
       requests:
         storage: 5Gi
+  name: 
     storageClassName: do-block-retain
 - kind: PersistentVolumeClaim
   apiVersion: v1
   metadata:
-    name: bedrock-log
+    name: yourLogClaimHere
   spec:
     accessModes:
     - ReadWriteOnce
