--- a/nextkube/all-in-one/nextcloud-aio.yml
+++ b/nextkube/all-in-one/nextcloud-aio.yml
@@ -35,7 +35,7 @@ spec:
     spec:
       containers:
       - name: nextcloud
-        image: nextcloud:14.0.7-apache
+        image: registry.hub.docker.com/library/nextcloud:14.0.7-apache
         volumeMounts:
         - mountPath: /var/www/html
           name: nextcloud-data
